tried fixing scrolling modal issue on iphone by removing height: 100%

--- a/src/components/CityModal/style.scss
+++ b/src/components/CityModal/style.scss
@@ -1,4 +1,5 @@
 @import "style/index.scss";
+
 :global .ReactModal__Body--open {
   overflow: hidden;
 }
@@ -12,7 +13,6 @@
     right: 0;
     outline: none;
     z-index: 99;
-    height: 100%;
 
     @include mq($from: desktop) {
       background-color: rgba(128, 128, 128, 0.5);
@@ -22,7 +22,6 @@
       width: 0;
       background-color: #fff;
       overflow-x: hidden;
-      // height: 100%;
       transition: 0.5s;
     }
 
@@ -82,9 +81,11 @@
     display: flex;
     // flex-direction: column;
     padding-bottom: 19px;
+
     & button {
       border: 0;
     }
+
     .city-modal-city-container {
       width: 85%;
 
@@ -322,6 +323,7 @@
 
     .city-data-container {
       border-right: 1px solid #e8e8e8;
+
       @include mq($from: desktop) {
         padding-right: 34px;
         padding-left: 26px;
@@ -345,10 +347,12 @@
       @include mq($until: desktop) {
         padding-bottom: 20px;
       }
+
       @include mq($from: desktop) {
         padding-right: 29px;
         padding-left: 23px;
       }
+
       & > h5,
       & > div {
         // margin-right: 29px;
